--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   
   <footer class="footer section" id="contact">
     <h2 class="section-title">Get in Touch</h2>
-    <p class="footer-title">Rei</p>
+    <p class="footer-title">vqx#0001</p>
     <div class="footer-social">
       <a href="https://github.com/ReifanD3V" target="_blank" class="footer-icon"><i
             class="bx bxl-github">
