--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           GitHub
           </i></a>
     </div>
-    <p>&#169; 2022 copyright all right reserved</p>
+    <p>Galih Kontol</p>
   </footer>
 
   <!--===== MAIN JS =====-->
