--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
-<header>
-  <p>Rebuilding!</p>
-</header>
+
+<html>
+
+<head>
+    <title>Cool Monkey</title>
+</head>
+<body>
+    <!--  MP4, WebM, and Ogg -->
+
+    <video controls autoplay loop  width="900">
+        <source src="movio.mp4">
+        This browser does not support HTML5 audio
+    </video>    
+
+</body>
+
+</html>
