--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-    <title>Cool Monkey</title>
+	<meta charset="utf-8">
+	<title>
+		Peler
+	</title>
 </head>
-<body>
-    <!--  MP4, WebM, and Ogg -->
-    
-    <video controls autoplay loop  width="900">
-        <source src="movio.mp4">
-        This browser does not support HTML5 audio
-    </video>   
-
+<body background="image.png" link="#fafafa" alink="#017bf5" vlink="#fafafa">
 </body>
-
 </html>
