--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		Peler
 	</title>
 </head>
-<body background="image.png" link="#fafafa" alink="#017bf5" vlink="#fafafa">
+<p> AOWKOKAWOKAWOKAWOKAWOKAWOAWKOKOKAWOKAOWKAWOKAOWKAOWKAWOKAWOKWAAOKOWAKOAWKOAWKOAOKAWOKWAOKOWAOKWAKO</p>
 </body>
 </html>
