--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		Peler
 	</title>
 </head>
-<p> AOWKOKAWOKAWOKAWOKAWOKAWOAWKOKOKAWOKAOWKAWOKAOWKAOWKAWOKAWOKWAAOKOWAKOAWKOAWKOAOKAWOKWAOKOWAOKWAKO</p>
+<video width="320" height="240" controls>
+  <source src="movio.mp4">
+Your browser does not support the video tag.
+</video>
 </body>
 </html>
