--- a/index.html
+++ b/index.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>
-		Peler
-	</title>
-</head>
-<video width="800" height="600" controls>
-  <source src="movio.mp4">
-Your browser does not support the video tag.
-</video>
-</body>
+ <head>
+   <meta http-equiv='refresh' content='0; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ'>
+
+ </head>
 </html>
