--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-   <meta http-equiv='refresh' content='0; URL=https://www.youtube.com/watch?v=dQw4w9WgXcQ'>
+  <p>Updating</p>
+  <font size="+2">Updating</font>
 
  </head>
 </html>
