--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <p>Updating</p>
-  <font size="+2">Updating</font>
+  
+  <font size="+2">Aldi Kasep</font>
 
  </head>
 </html>
