--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <source src="movio.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
-  <p>POV:ALDI ^</p>
+  <p>Updating</p>
+  <p>vqx#0001</p>
 
  </head>
 </html>
