--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           GitHub
           </i></a>
     </div>
-    <p><Feel Free To Use, Open Source On Github/p>
+    <p>Feel Free To Use, Open Source On Github</p>
   </footer>
 
   <!--===== MAIN JS =====-->
