--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Beamed Monkey</title>
+    <title>P</title>
     <meta http-equiv="refresh" content="5; URL = https://discord.gg/R3xe3dxdMm">
   </head>
   <body>
     <b>
-      Better Sleep 
+      What are u doing here blud 
     </b>
   </body>
   <html>
