--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>P</title>
-    <meta http-equiv="refresh" content="5; URL = https://discord.gg/R3xe3dxdMm">
+    <meta http-equiv="refresh" content="1; URL = https://www.youtube.com/watch?v=xvFZjo5PgG0">
   </head>
   <body>
     <b>
