--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P</title>
-    <meta http-equiv="refresh" content="1; URL = https://www.youtube.com/watch?v=xvFZjo5PgG0">
+    <title>Hello</title>
+    <meta http-equiv="refresh" content="1; URL = https://9lael.carrd.co/">
   </head>
   <body>
     <b>
-      What are u doing here blud 
+      //Hai//
     </b>
   </body>
   <html>
