--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="GoddesLax">
 
-<meta property="og:description" content="GoddesLax is a •Indonesian Communityand sharing place• ">
+<meta property="og:description" content="Tlol ">
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/1054721115135680534/1055130057477214290/IMG_6785-removebg-preview.png?width=230&height=230">
 <meta name="theme-color" content="#00008B">
 <meta name='dmca-site-verification' content='R0V1RGZYQVRaYzI5ZEkzRUZmTkFOZz090' />
@@ -91,7 +91,7 @@
 <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
 </svg>
 </div><br><br><br><br>
-<h2 data-aos="fade-up">GoddesLax Total Members</h2>
+<h2 data-aos="fade-up">Total Members</h2>
 <div class="stats-container" data-aos="fade-up">
 <div class="stat-boxes">
 <h1>Members</h1>
@@ -110,7 +110,7 @@
 <footer>
 <br>
 Made with <a href="./my_nudes/index.html" target="_blank" style="cursor: text;"></a> by <a href="https://discord.com/users/1033410898422927511" target="_blank">vqx#0001</a> & <a href="https://discord.com/users/953572528696229889" target="_blank">zry#3222</a><br>
-Copyright © GoddesLax <br><br>
+Copyright © <br><br>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.js" type="b5088bb5f3cd5ce274cf12d2-text/javascript"></script>
 <script src="aos.js" type="b5088bb5f3cd5ce274cf12d2-text/javascript"></script>
