--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <title>Test</title>
 <link rel="stylesheet" type="text/css" href="./assets/aos.css">
 <meta property="og:type" content="website">
-<meta property="og:title" content="GoddesLax">
+<meta property="og:title" content="pppp">
 
 <meta property="og:description" content="Tlol ">
 <meta property="og:image" content="https://cdn.discordapp.com/attachments/1054721115135680534/1055130057477214290/IMG_6785-removebg-preview.png?width=230&height=230">
